--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,19 @@
 {
-  "version": "1",
-  "name": "PHP Webshell Detection Feed",
-  "description": "Feed containing YARA rules for PHP webshell detection.",
-  "provider": "iteasy-ops-dev",
-  "url": "https://raw.githubusercontent.com/iteasy-ops-dev/php-webshell-detection/main/feed.json",
-  "rules": ["rule1.yara", "rule2.yara"]
+  "version": 1,
+  "publish_timestamp": 1708396800,
+  "event_count": 2,
+  "events": [
+    {
+      "event_id": "12345",
+      "path": "12345.json",
+      "info": "PHP Webshell Detection Rules",
+      "timestamp": 1708396800
+    },
+    {
+      "event_id": "67890",
+      "path": "67890.json",
+      "info": "New Webshell YARA Rules",
+      "timestamp": 1708400000
+    }
+  ]
 }
