--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,52 @@
 {
-  "version": 1,
-  "publish_timestamp": 1708396800,
-  "event_count": 2,
-  "events": [
-    {
-      "id": "12345",  
-      "path": "12345.json",
-      "info": "PHP Webshell Detection Rules",
-      "timestamp": 1708396800
-    }
-  ]
+  "123e4567-e89b-12d3-a456-426614174000": {
+    "Orgc": {
+      "name": "iteasy",
+      "uuid": "550e8400-e29b-41d4-a716-446655440000"
+    },
+    "Tag": [
+      {
+        "colour": "#004646",
+        "local": false,
+        "name": "type:OSINT",
+        "relationship_type": ""
+      },
+      {
+        "colour": "#ffffff",
+        "local": false,
+        "name": "tlp:white",
+        "relationship_type": ""
+      }
+    ],
+    "info": "PHP Webshell YARA Rules",
+    "date": "2025-02-20",
+    "analysis": 2,
+    "threat_level_id": 3,
+    "timestamp": 1708396800
+  },
+  "456e7890-e89b-12d3-a456-426614174111": {
+    "Orgc": {
+      "name": "iteasy",
+      "uuid": "550e8400-e29b-41d4-a716-446655440000"
+    },
+    "Tag": [
+      {
+        "colour": "#004646",
+        "local": false,
+        "name": "type:OSINT",
+        "relationship_type": ""
+      },
+      {
+        "colour": "#ffffff",
+        "local": false,
+        "name": "tlp:white",
+        "relationship_type": ""
+      }
+    ],
+    "info": "New Webshell YARA Rules",
+    "date": "2025-02-21",
+    "analysis": 2,
+    "threat_level_id": 3,
+    "timestamp": 1708400000
+  }
 }
